--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@
 
 DATABASE_URL="mysql://root:romina_27@localhost:3306/blog-page"
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="mQ5MrBb4mmvjvv5XfClNsTcfMTwab5Hqh07GdDzg/vs="
-GOOGLE_CLIENT_ID="411855102915-dlbgcjficrasqo44qj6gar0uqo9ku2of.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+NEXTAUTH_SECRET=""
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
